--- a/index.html
+++ b/index.html
@@ -365,13 +365,12 @@
 
       function sort_by(type = "number") {
         let sort_function = (a, b) => a.localeCompare(b);
-
         if (type == "number") {
           sort_function = function (a, b) {
             let a_numeric = parseInt(a.replace(/[^0-9]/g, ""));
             let b_numeric = parseInt(b.replace(/[^0-9]/g, ""));
             if (a_numeric == "" && b_numeric == "") return a.localeCompare(b);
-            else return a_numeric > b_numeric;
+            else return a_numeric > b_numeric ? 1 : -1;
           };
         } else if (type == "name") {
           sort_function = function (a, b) {
@@ -382,11 +381,9 @@
         } else {
           return;
         }
-
         const textarea = document.getElementById("players");
         let players = textarea.value.split("\n");
-        players.sort(sort_function);
-
+        players = players.toSorted(sort_function);
         textarea.value = players.filter((p) => p != "").join("\n");
       }
 
